--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 
 
   <div class="morebtn">
-    <a href="https://github.com/vimalj/portfolio/experience" class="btn"><span>View All</span>
+    <a href="/experience" class="btn"><span>View All</span>
       <i class="fas fa-arrow-right"></i>
   </a>
  
