--- a/index.html
+++ b/index.html
@@ -110,87 +110,112 @@
     <div class="container">
           <div class="row" id="skillsContainer">
 
-            
-              <div class="bar">
+                <div class="bar">
+                <div class="info">
                 <img src="https://img.icons8.com/?size=100&id=VLKafOkk3sBX&format=png&color=000000"/>
                 <span>Azure</span>
-              </div>
+                </div>
+                </div>
+
               <div class="bar">
+                <div class="info">
                 <img src="https://img.icons8.com/?size=100&id=20909&format=png&color=000000"/>
                 <span>HTML</span>
-              </div>
+              </div></div>
               <div class="bar">
+                <div class="info">
                 <img src="https://img.icons8.com/?size=100&id=13679&format=png&color=000000"/>
                 <span>JAVA</span>
-              </div>
+              </div></div>
               <div class="bar">
+                <div class="info">
                 <img src="https://img.icons8.com/?size=100&id=108784&format=png&color=000000"/>
                 <span>JAVASCRIPT</span>
-              </div>
+              </div></div>
               <div class="bar">
+                <div class="info">
                 <img src="https://img.icons8.com/?size=100&id=13441&format=png&color=000000"/>
                 <span>Python</span>
-              </div>
+              </div></div>
               <div class="bar">
+                <div class="info">
                 <img src="https://img.icons8.com/?size=100&id=eMdBqh1N9IWw&format=png&color=000000"/>
                 <span>C</span>
-              </div>
+              </div></div>
               <div class="bar">
+                <div class="info">
                 <img src="https://img.icons8.com/?size=100&id=40669&format=png&color=000000"/>
                 <span>C++</span>
-              </div>
+              </div></div>
               <div class="bar">
+                <div class="info">
                 <img src="https://img.icons8.com/?size=100&id=13444&format=png&color=000000"/>
                 <span>Arduino</span>
-              </div>
+              </div></div>
               <div class="bar">
+                <div class="info">
                 <img src="https://img.icons8.com/?size=100&id=13443&format=png&color=000000"/>
                 <span>Raspberrypi</span>
-              </div>
+              </div></div>
               <div class="bar">
+                <div class="info">
                 <img src="https://img.icons8.com/?size=100&id=54087&format=png&color=000000"/>
                 <span>Nodejs</span>
-              </div>
+              </div></div>
               <div class="bar">
+                <div class="info">
                 <img src="https://img.icons8.com/?size=100&id=QEQQKirln6Tf&format=png&color=000000"/>
                 <span>Postman</span>
-              </div>
+              </div></div>
 
             <div class="bar">
+              <div class="info">
                 <img src="https://img.icons8.com/?size=100&id=22813&format=png&color=000000"/>
                 <span>Docker</span>
-              </div>
+              </div></div>
 
               <div class="bar">
+                <div class="info">
                 <img src="https://img.icons8.com/?size=100&id=rOHcpTUtCTjr&format=png&color=000000"/>
                 <span>Wireshark</span>
-              </div>
+              </div></div>
+
               <div class="bar">
+                <div class="info">
                 <img src="https://img.icons8.com/?size=100&id=sFFBQN8kzSOS&format=png&color=000000"/>
                 <span>VMware workstation</span>
-              </div>
+              </div></div>
+
               <div class="bar">
+                <div class="info">
                 <img src="https://img.icons8.com/?size=100&id=9uVrNMu3Zx1K&format=png&color=000000"/>
                 <span>Grafana</span>
-              </div>
+              </div></div>
+
               <div class="bar">
+                <div class="info">
                 <img src="https://img.icons8.com/?size=100&id=UFXRpPFebwa2&format=png&color=000000"/>
                 <span>MySQL</span>
-              </div>
+              </div></div>
+
               <div class="bar">
+                <div class="info">
                 <img src="https://img.icons8.com/?size=100&id=62856&format=png&color=000000"/>
                 <span>Github</span>
-              </div>
+              </div></div>
+
               <div class="bar">
+                <div class="info">
                 <img src="https://img.icons8.com/?size=100&id=38553&format=png&color=000000"/>
                 <span>Selenium</span>
-              </div>
-
-            </div> 
+              </div></div>
+              
       </div>
 </div>
 </section>
 <!-- skills section ends -->
+
+
 
 <!-- education section starts -->
 <section class="education" id="education">
