--- a/experience/index.html
+++ b/experience/index.html
@@ -15,7 +15,7 @@
 
 <!-- navbar starts -->
 <header>
-        <a href="/" class="logo"><i class="fab fa-node-js"></i> Vimal</a>
+        <a href="/" class="logo"><i class="fab fa-node-js"></i> Vimal Jaswal</a>
 
         <div id="menu" class="fas fa-bars"></div>
         <nav class="navbar">
@@ -36,7 +36,7 @@
 
   <h2 class="heading"><i class="fas fa-briefcase"></i> Work Experience</h2>
   <div class="quote">
-      <span>every experience in your life is being orchestrated to teach you something you need to know to move forward.</span>
+      <span>Every experience in your life is being orchestrated to teach you something you need to know to move forward.</span>
   </div>
 
   <div class="timeline">
@@ -96,7 +96,7 @@
 
       <div class="box">
           <h3>Vimal's Portfolio</h3>
-          <p>Thank you for visiting my personal portfolio. <br/> <br/> Keep Rising 🚀.  Connect with me over social network</p>
+          <p>• Thank you for visiting my portfolio. <br/><br/> • Connect with me over social network.</p>
       </div>
 
       <div class="box">
