--- a/404.html
+++ b/404.html
@@ -61,7 +61,7 @@
 
       <div class="box">
           <h3>Vimal's Portfolio</h3>
-          <p>Thank you for visiting my personal portfolio website.  <br/> <br/> Keep Rising 🚀. Connect with me over social network.</p>
+          <p>Thank you for visiting my portfolio.  <br/> <br/> Connect with me over social network.</p>
       </div>
 
       <div class="box">
