--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <!-- navigation bar starts -->
 <header>
-        <a href="/" class="logo"><i class="fab fa-node-js"></i> Vimal</a>
+        <a href="/" class="logo"><i class="fab fa-node-js"></i> Vimal Jaswal</a>
 
         <div id="menu" class="fas fa-bars"></div>
         <nav class="navbar">
@@ -42,7 +42,7 @@
     <div id="particles-js"></div>
 
     <div class="content">
-    <h2>Hi There,<br/> I'm <span>Vimal</span> Jaswal</h2>
+    <h2>Hi there,<br/> I am <span>Vimal</span> Jaswal</h2>
     <p>i am into <span class="typing-text"></span></p>
     <a href="#about" class="btn"><span>About Me</span>
       <i class="fas fa-arrow-circle-down"></i>
@@ -72,12 +72,10 @@
         <img draggable="false" class="tilt" src="./assets/images/vj.jpg" alt="">
     </div>
     <div class="content">
-        <h3>I'm Vimal</h3>
+        <h3>I am Vimal Jaswal</h3>
         <span class="tag">Information and Communication Technology professional</span>
         
-        <p>I am a an Information and Communication Technology professional based in Punjab, India. 
-          The highest education I have is Master in Internet of things Technologies from TUDublin, Ireland.
-          I am very passionate about improving my skills & developing applications.
+        <p style="text-align:justify;">• An achievement oriented, resilient and enthusiastic individual interested to apply skills by expanding horizons in today’s fast pacing Information and Communication Technology to foster in professional environment
           </p>
         
         <div class="box-container">
@@ -203,7 +201,7 @@
 
               <div class="bar">
                 <div class="info">
-                <img src="https://img.icons8.com/?size=100&id=62856&format=png&color=000000"/>
+                <img src="https://img.icons8.com/?size=100&id=118557&format=png&color=000000"/>
                 <span>Github</span>
               </div></div>
 
@@ -338,7 +336,7 @@
 
       <div class="box">
           <h3>Vimal's Portfolio</h3>
-          <p>Thank you for visiting my personal portfolio.<br/> <br/> Keep Rising 🚀. Connect with me over social network. </p>
+          <p> • Thank you for visiting my portfolio.<br/> <br/> • Connect with me over social network. </p>
       </div>
 
       <div class="box">
