--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
         
         <div class="resumebtn">
-            <a href="https://drive.google.com/file/d/1GBXK_UsqRAVsgthecuHVXifSohYLNufY/view" target="_blank" class="btn"><span>Resume</span>
+            <a href="https://drive.google.com/file/d/1GBXK_UsqRAVsgthecuHVXifSohYLNufY/view?usp=sharing" target="_blank" class="btn"><span>Resume</span>
                 <i class="fas fa-chevron-right"></i>
             </a>
         </div>
