--- a/index.html
+++ b/index.html
@@ -319,9 +319,11 @@
 
   <div class="container">
     <div class="content">
+        <marquee direction="up">
       <div class="image-box">
         <img draggable="false" class="tilt" src="./assets/images/contact1.jpg" alt="contact1" >
       </div>
+            </marquee>
   </div>
 
   </div>
@@ -337,7 +339,14 @@
 
       <div class="box">
           <h3>Vimal's Portfolio</h3>
-          <p> • Thank you for visiting my portfolio.<br/> <br/> • Connect with me over social network. </p>
+          <marquee>
+          <p> • Thank you for visiting my portfolio.<br/>
+              </p>
+            </marquee>
+            <br/>
+             <marquee>
+            <p> • Connect with me over social network. </p>
+        </marquee>
       </div>
 
       <div class="box">
