--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 
 
   <div class="morebtn">
-    <a href="/experience" class="btn"><span>View All</span>
+    <a href="/experience/index.html" class="btn"><span>View All</span>
       <i class="fas fa-arrow-right"></i>
   </a>
  
