--- a/experience/index.html
+++ b/experience/index.html
@@ -129,7 +129,7 @@
 <!-- footer section ends -->
 
 <!-- scroll top btn -->
-<a href="#experience" class="fas fa-angle-up" id="scroll-top"></a>
+<a href="/#home" class="fas fa-angle-up" id="scroll-top"></a>
 <!-- scroll back to top -->
 
 
