--- a/experience/index.html
+++ b/experience/index.html
@@ -78,7 +78,7 @@
     </div>
 
   <div class="morebtn">
-    <a href="index.html" class="btn">
+    <a href="/#home" class="btn">
         <i class="fas fa-arrow-left"></i>
         <span>Back to Home</span>
   </a>
