--- a/experience/index.html
+++ b/experience/index.html
@@ -78,7 +78,7 @@
     </div>
 
   <div class="morebtn">
-    <a href="/#home" class="btn">
+    <a href="https://github.com/vimalj/portfolio/blob/b36d4e2582e63a97d624abf9525d60e28fd32e88/index.html" class="btn">
         <i class="fas fa-arrow-left"></i>
         <span>Back to Home</span>
   </a>
